--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <span class="errorMsg"></span>
                 </div>
                 <button type="submit"
-                    class="flex bg-[#152DFF] py-2 w-[300px] justify-center mt-10 text-white mx-auto rounded-full">Submit</button>
+                    class="flex bg-[#152DFF] hover:bg-[#150DEE] py-2 w-[300px] justify-center mt-10 text-white mx-auto rounded-full">Submit</button>
             </form>
         </div>
     </div>
